--- a/Assignment1.html
+++ b/Assignment1.html
@@ -76,7 +76,7 @@ Let's create something amazing together! 🚀</p>
     </ul>
     <h2>My Picture</h2>
     <img src="./Mypicture.jpg" alt="My picture"> 
-    <a href="https://fiza-naseem.github.io/Samz-technology/Assignment1.html" target="_blank">🚀 Visit My GitHub Website</a>
+    <a href="https://fiza-naseem.github.io/Samz-technology/Assignment1.html">🚀 Visit My GitHub Website</a>
 </body>
 </html>
 
